@@ -5,6 +5,9 @@ Changelog
 2.0.3 (unreleased)
 ------------------
 
+- Administrator role now may resolve or reactivate dossiers
+  [lgraf]
+
 - When resolving dossiers, only issue filing numbers for active dossiers
   [lgraf]
 
